secp256k1: updates for multiplatform build, incl. CircleCI config
Signed-off-by: Ben Burns <803016+benjamincburns@users.noreply.github.com>

--- a/secp256k1/build.gradle
+++ b/secp256k1/build.gradle
@@ -31,7 +31,7 @@ task macLibCopy(type: Copy) {
 jar.dependsOn macLibCopy
 
 task linuxLibCopy(type: Copy) {
-  from '//FIXME'
+  from 'build/lib/libsecp256k1.so'
   into 'build/resources/main/linux-x86-64'
 }
 jar.dependsOn linuxLibCopy
