--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -57,18 +57,8 @@ commands:
   prepare_final_assembly:
     description: "Prepare - Final Assembly"
     steps:
-      - run:
-          name: Install Packages - build tools
-          command: |
-            sudo apt-get update
-            sudo apt-get install -y autoconf build-essential libtool
       - attach_workspace:
-          at: ~/project/secp256k1/build/lib
-      - run:
-          name: "Check workspace"
-          command: |
-            ls ~/project/secp256k1/build
-            ls ~/project/secp256k1/build/lib
+          at: secp256k1/build
 jobs:
   native-build-linux-x86-64:
     executor: besu_executor_med_linux
@@ -82,9 +72,9 @@ jobs:
           command: |
             ./build.sh
       - persist_to_workspace:
-          root: secp256k1/build/lib
+          root: secp256k1/build
           paths:
-            - libsecp256k1.so*
+            - lib/libsecp256k1.so*
       - store_artifacts:
           name: Linux native build artifacts
           path:  secp256k1/build/lib
@@ -102,9 +92,9 @@ jobs:
           command: |
             ./build.sh
       - persist_to_workspace:
-          root: secp256k1/build/lib
+          root: secp256k1/build
           paths:
-            - libsecp256k1.*dylib
+            - lib/libsecp256k1.*dylib
       - store_artifacts:
           name: macOS native build artifacts
           path:  secp256k1/build/lib
@@ -118,12 +108,26 @@ jobs:
       - run:
           name: gradle
           command: |
-            ./gradlew build
+            ./gradlew --no-daemon --parallel build
+      - persist_to_workspace:
+          root: secp256k1/build
+          paths:
+            - libs/*.jar
       - store_artifacts:
           name: Final build artifacts
           path: secp256k1/build/libs
           destination: secp256k1_jars
           when: always
+  publish:
+    executor: besu_executor_med_linux
+    steps:
+      - checkout_code
+      - attach_workspace:
+          at: secp256k1/build
+      - run:
+          name: Publish
+          command: |
+            ./gradlew --no-daemon --parallel bintrayUpload
 workflows:
   version: 2
   default:
@@ -134,4 +138,12 @@ workflows:
           requires:
             - native-build-linux-x86-64
             - native-build-macos
+      - publish:
+          filters:
+            branches:
+              only:
+                - master
+                - /^release-.*/
+          requires:
+            - final-assembly
 
