AltBN128 native library
native librart for AltBN128 precompiled contract.  Derived from SputnikVM
https://github.com/ETCDEVTeam/sputnikvm/blob/8ce6d085a0773196a198400ca9721e19bd7ed8a0/precompiled/bn128/src/lib.rs

Signed-off-by: Danno Ferrin <danno.ferrin@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,11 @@
-*/build
+**/build
+**/target
 
-.idea
-*/.idea
+**/Cargo.lock
 
-.gradle
-*/.gradle
+**/.idea
+**/.classpath
+**/.project
+**/.settings
+
+**/.gradle
