--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,15 +45,23 @@ commands:
       - run:
           name: Install Packages - build tools
           command: |
+            # secp256k1 dependencies
             sudo apt-get update
             sudo apt-get install -y autoconf build-essential libtool
+            # rust dependencies
+            export CARGO_HOME="$HOME/.cargo"
+            curl https://sh.rustup.rs -sSf | sh -s -- -y --default-toolchain $RUSTUP_TOOLCHAIN
   prepare_macos:
     description: "Prepare - macOS"
     steps:
       - run:
           name: Install Packages - build tools
           command: |
+            # secp256k1 dependencies
             brew install autoconf automake libtool
+            # rust dependencies
+            export CARGO_HOME="$HOME/.cargo"
+            curl https://sh.rustup.rs -sSf | sh -s -- -y --default-toolchain $RUSTUP_TOOLCHAIN
   prepare_final_assembly:
     description: "Prepare - Final Assembly"
     steps:
