--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,20 +45,23 @@ commands:
       - run:
           name: Install Packages - build tools
           command: |
+            # secp256k1 dependencies
             sudo apt-get update
             sudo apt-get install -y autoconf build-essential libtool
+            # rust dependencies
+            export CARGO_HOME="$HOME/.cargo"
+            curl https://sh.rustup.rs -sSf | sh -s -- -y --default-toolchain 1.42.0
   prepare_macos:
     description: "Prepare - macOS"
     steps:
       - run:
           name: Install Packages - build tools
           command: |
+            # secp256k1 dependencies
             brew install autoconf automake libtool
-  prepare_final_assembly:
-    description: "Prepare - Final Assembly"
-    steps:
-      - attach_workspace:
-          at: secp256k1/build
+            # rust dependencies
+            export CARGO_HOME="$HOME/.cargo"
+            curl https://sh.rustup.rs -sSf | sh -s -- -y --default-toolchain 1.42.0
 jobs:
   native-build-linux-x86-64:
     executor: besu_executor_med_linux
@@ -72,13 +75,19 @@ jobs:
           command: |
             ./build.sh
       - persist_to_workspace:
-          root: secp256k1/build
+          root: .
           paths:
-            - lib/libsecp256k1.so*
+            - secp256k1/build/lib/*.so*
+            - altbn128/build/lib/*.so*
       - store_artifacts:
-          name: Linux native build artifacts
+          name: Linux secp256k1 native build artifacts
           path:  secp256k1/build/lib
           destination: secp256k1_linux_x86_64_native_artifacts
+          when: always
+      - store_artifacts:
+          name: Linux altbn128 native build artifacts
+          path:  altbn128/build/lib
+          destination: altbn128_linux_x86_64_native_artifacts
           when: always
   native-build-macos:
     executor: besu_executor_med_macos
@@ -92,30 +101,43 @@ jobs:
           command: |
             ./build.sh
       - persist_to_workspace:
-          root: secp256k1/build
+          root: .
           paths:
-            - lib/libsecp256k1.*dylib
+            - secp256k1/build/lib/*.*dylib*
+            - altbn128/build/lib/*.*dylib*
       - store_artifacts:
-          name: macOS native build artifacts
+          name: macOS secp256k1 native build artifacts
           path:  secp256k1/build/lib
           destination: secp256k1_macOS_native_artifacts
+          when: always
+      - store_artifacts:
+          name: macOS altbn128 native build artifacts
+          path:  altbn128/build/lib
+          destination: altbn128_macOS_native_artifacts
           when: always
   final-assembly:
     executor: besu_executor_med_linux
     steps:
       - checkout_code
-      - prepare_final_assembly
+      - attach_workspace:
+          at: .
       - run:
           name: gradle
           command: |
             ./gradlew --no-daemon --parallel build
       - persist_to_workspace:
-          root: secp256k1/build
+          root: .
           paths:
-            - libs/*.jar
+            - secp256k1/build/libs/*.jar
+            - altbn128/build/libs/*.jar
       - store_artifacts:
-          name: Final build artifacts
+          name: Final secp256k1 build artifacts
           path: secp256k1/build/libs
+          destination: secp256k1_jars
+          when: always
+      - store_artifacts:
+          name: Final altbn128 build artifacts
+          path: altbn128/build/libs
           destination: secp256k1_jars
           when: always
   publish:
@@ -123,7 +145,7 @@ jobs:
     steps:
       - checkout_code
       - attach_workspace:
-          at: secp256k1/build
+          at: .
       - run:
           name: Publish
           command: |
