--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -77,17 +77,23 @@ jobs:
       - persist_to_workspace:
           root: .
           paths:
-            - secp256k1/build/lib/*.so*
             - altbn128/build/lib/*.so*
-      - store_artifacts:
-          name: Linux secp256k1 native build artifacts
-          path:  secp256k1/build/lib
-          destination: secp256k1_linux_x86_64_native_artifacts
-          when: always
+            - bls12-381/build/lib/*.so*
+            - secp256k1/build/lib/*.so*
       - store_artifacts:
           name: Linux altbn128 native build artifacts
           path:  altbn128/build/lib
           destination: altbn128_linux_x86_64_native_artifacts
+          when: always
+      - store_artifacts:
+          name: Linux bls12-381 native build artifacts
+          path:  bls12-381/build/lib
+          destination: bls12_381_linux_x86_64_native_artifacts
+          when: always
+      - store_artifacts:
+          name: Linux secp256k1 native build artifacts
+          path:  secp256k1/build/lib
+          destination: secp256k1_linux_x86_64_native_artifacts
           when: always
   native-build-macos:
     executor: besu_executor_med_macos
@@ -103,17 +109,23 @@ jobs:
       - persist_to_workspace:
           root: .
           paths:
-            - secp256k1/build/lib/*.*dylib*
             - altbn128/build/lib/*.*dylib*
-      - store_artifacts:
-          name: macOS secp256k1 native build artifacts
-          path:  secp256k1/build/lib
-          destination: secp256k1_macOS_native_artifacts
-          when: always
+            - bls12-381/build/lib/*.*dylib*
+            - secp256k1/build/lib/*.*dylib*
       - store_artifacts:
           name: macOS altbn128 native build artifacts
           path:  altbn128/build/lib
           destination: altbn128_macOS_native_artifacts
+          when: always
+      - store_artifacts:
+          name: macOS bls12-381 native build artifacts
+          path:  bls12-381/build/lib
+          destination: bls12_381_macOS_native_artifacts
+          when: always
+      - store_artifacts:
+          name: macOS secp256k1 native build artifacts
+          path:  secp256k1/build/lib
+          destination: secp256k1_macOS_native_artifacts
           when: always
   final-assembly:
     executor: besu_executor_med_linux
@@ -128,16 +140,22 @@ jobs:
       - persist_to_workspace:
           root: .
           paths:
-            - secp256k1/build/libs/*.jar
             - altbn128/build/libs/*.jar
-      - store_artifacts:
-          name: Final secp256k1 build artifacts
-          path: secp256k1/build/libs
-          destination: secp256k1_jars
-          when: always
+            - bls12-381/build/libs/*.jar
+            - secp256k1/build/libs/*.jar
       - store_artifacts:
           name: Final altbn128 build artifacts
           path: altbn128/build/libs
+          destination: secp256k1_jars
+          when: always
+      - store_artifacts:
+          name: Final bls12-381 build artifacts
+          path: bls12-381/build/libs
+          destination: secp256k1_jars
+          when: always
+      - store_artifacts:
+          name: Final secp256k1 build artifacts
+          path: secp256k1/build/libs
           destination: secp256k1_jars
           when: always
   publish:
