Common Repository Structure compliance
Add files missing to match common repository structure. Changelog,
code of conduct, contributing, maintainers, security, some tests.

Signed-off-by: Danno Ferrin <danno.ferrin@gmail.com>

--- a/bls12-381/build.gradle
+++ b/bls12-381/build.gradle
@@ -21,6 +21,10 @@ plugins {
 
 dependencies {
   implementation 'net.java.dev.jna:jna:5.5.0'
+  testImplementation 'com.google.guava:guava:29.0-jre'
+  testImplementation 'junit:junit:4.13'
+  testImplementation 'org.apache.tuweni:bytes:1.3.0'
+  testImplementation 'org.assertj:assertj-core:3.16.1'
 }
 
 task macLibCopy(type: Copy) {
