--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,9 @@
  * SPDX-License-Identifier: Apache-2.0
  */
 
+sourceCompatibility = 11
+targetCompatibility = 11
+
 allprojects {
   repositories {
     jcenter()
