--- a/build.gradle
+++ b/build.gradle
@@ -13,10 +13,12 @@
  * SPDX-License-Identifier: Apache-2.0
  */
 
-sourceCompatibility = 11
-targetCompatibility = 11
-
 allprojects {
+  apply plugin: 'java-library'
+
+  sourceCompatibility = 11
+  targetCompatibility = 11
+
   repositories {
     jcenter()
     mavenCentral()
