Common Repository Structure compliance (#25)
Add files missing to match common repository structure. Changelog,
code of conduct, contributing, maintainers, security, some tests.

Signed-off-by: Danno Ferrin <danno.ferrin@gmail.com>

--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,11 @@
  */
 
 allprojects {
+  apply plugin: 'java-library'
+
+  sourceCompatibility = 11
+  targetCompatibility = 11
+
   repositories {
     jcenter()
     mavenCentral()
