--- a/bls12-381/build.gradle
+++ b/bls12-381/build.gradle
@@ -148,10 +148,10 @@ def artifactoryRepo = System.getenv('ARTIFACTORY_REPO') ?: 'besu-maven'
 def artifactoryOrg = System.getenv('ARTIFACTORY_ORG') ?: 'hyperledger'
 
 artifactory {
-  contextUrl = "https://hyperledger.jfrog.io/${artifactoryOrg}/${artifactoryRepo}"
+  contextUrl = "https://hyperledger.jfrog.io/${artifactoryOrg}"
   publish {
     repository {
-      repoKey = "."
+      repoKey = artifactoryRepo
       username = artifactoryUser
       password = artifactoryKey
     }
