--- a/.github/workflows/repolinter.yml
+++ b/.github/workflows/repolinter.yml
@@ -2,6 +2,7 @@
 name: Repolinter
 
 on:
+  workflow_dispatch:
   push:
     branches:
       - master
@@ -14,7 +15,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    container: hyperledger-tools.jfrog.io/repolinter:0.10.0
+    container: ghcr.io/todogroup/repolinter:v0.10.1
     steps:
       - name: Checkout Code
         uses: actions/checkout@v2
