Added support for SECP256R1 using besu-native-ec
Signed-off-by: Daniel Lehrner <daniel@io.builders>

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "bls12-381/matterlabs-eip1962"]
 	path = bls12-381/matterlabs-eip1962
 	url = https://github.com/matter-labs/eip1962.git
+[submodule "secp256r1/besu-native-ec"]
+	path = secp256r1/besu-native-ec
+	url = git@github.com:ConsenSys/besu-native-ec.git
