add .cargo/bin to path during prep
Signed-off-by: garyschulte <garyschulte@gmail.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -63,6 +63,7 @@ commands:
             export CARGO_HOME="$HOME/.cargo"
             curl https://sh.rustup.rs -sSf | sh -s -- -y --default-toolchain 1.53.0
             # install both x86 and arm64 toolchains
+            export PATH="$HOME/.cargo/bin:$PATH"
             rustup target add x86_64-apple-darwin
             rustup target add aarch64-apple-darwin
 
