--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -187,7 +187,7 @@ workflows:
           filters:
             branches:
               only:
-                - master
+                - main
                 - /^release-.*/
           requires:
             - final-assembly
