--- a/secp256r1/build.gradle
+++ b/secp256r1/build.gradle
@@ -24,7 +24,7 @@ dependencies {
 
     testImplementation 'com.google.guava:guava:29.0-jre'
     testImplementation 'junit:junit:4.13'
-    testImplementation 'org.apache.tuweni:bytes:1.3.0'
+    testImplementation 'org.apache.tuweni:tuweni-bytes:2.0.0'
     testImplementation 'org.assertj:assertj-core:3.16.1'
 }
 
