--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -85,6 +85,7 @@ jobs:
             - altbn128/build/lib/*.so*
             - bls12-381/build/lib/*.so*
             - secp256k1/build/lib/*.so*
+            - ipa-multipoint/build/lib/*.so
             - secp256r1/besu-native-ec/release/*.so
       - store_artifacts:
           name: Linux altbn128 native build artifacts
@@ -106,6 +107,11 @@ jobs:
           path:  secp256r1/besu-native-ec/release
           destination: secp256r1_linux_x86_64_native_artifacts
           when: always
+      - store_artifacts:
+          name: Linux ipa-multipoint native build artifacts
+          path: ipa-multipoint/build/lib
+          destination: ipa_multipoint_linux_x86_64_native_artifacts
+          when: always
   native-build-macos:
     executor: besu_executor_med_macos
     environment:
@@ -123,6 +129,7 @@ jobs:
             - altbn128/build/lib/*.*dylib*
             - bls12-381/build/lib/*.*dylib*
             - secp256k1/build/lib/*.*dylib*
+            - ipa-multipoint/build/lib/*.dylib
             - secp256r1/besu-native-ec/release/*.dylib
       - store_artifacts:
           name: macOS altbn128 native build artifacts
@@ -144,6 +151,11 @@ jobs:
           path:  secp256r1/besu-native-ec/release
           destination: secp256r1_macOS_native_artifacts
           when: always
+      - store_artifacts:
+          name: macOS ipa-multipoint native build artifacts
+          path: ipa-multipoint/build/lib
+          destination: ipa_multipoint_macOS_native_artifacts
+          when: always
   final-assembly:
     executor: besu_executor_med_linux
     steps:
@@ -161,6 +173,7 @@ jobs:
             - bls12-381/build/libs/*.jar
             - secp256k1/build/libs/*.jar
             - secp256r1/build/libs/*.jar
+            - ipa-multipoint/build/libs/*.jar
       - store_artifacts:
           name: Final altbn128 build artifacts
           path: altbn128/build/libs
@@ -180,6 +193,11 @@ jobs:
           name: Final secp256r1 build artifacts
           path: secp256r1/build/libs
           destination: secp256r1_jars
+          when: always
+      - store_artifacts:
+          name: Final ipa-multipoint build artifacts
+          path: ipa-multipoint/build/libs
+          destination: secp256k1_jars
           when: always
   publish:
     executor: besu_executor_med_linux
