--- a/ipa-multipoint/ipa_multipoint_jni/Cargo.toml
+++ b/ipa-multipoint/ipa_multipoint_jni/Cargo.toml
@@ -10,12 +10,9 @@ repository = "https://github.com/hyperledger/besu-native"
 edition = "2018"
 
 [dependencies]
-ipa-multipoint = { path = "../ipa_multipoint" }
+ipa-multipoint = { git = "https://github.com/crate-crypto/ipa_multipoint", branch = "develop" }
 bandersnatch = "0.1.1"
 jni = { version = "0.19.0", features = ["invocation"] } # We use invocation in tests.
-rand_chacha = "0.3.1"
-rand_core = "0.6.3"
-rand = "0.8.5"
 ark-ff = "0.3.0"
 hex = "0.4.3"
 
