--- a/settings.gradle
+++ b/settings.gradle
@@ -16,5 +16,6 @@
 rootProject.name='besu-native'
 include 'altbn128'
 include 'bls12-381'
+include 'ipa-multipoint'
 include 'secp256k1'
 include 'secp256r1'
