--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -87,6 +87,7 @@ jobs:
             - secp256k1/build/lib/*.so*
             - ipa-multipoint/build/lib/*.so
             - secp256r1/besu-native-ec/release/*.so
+            - keccak/build/lib/*.so
       - store_artifacts:
           name: Linux altbn128 native build artifacts
           path:  altbn128/build/lib
@@ -112,6 +113,11 @@ jobs:
           path: ipa-multipoint/build/lib
           destination: ipa_multipoint_linux_x86_64_native_artifacts
           when: always
+      - store_artifacts:
+          name: Linux keccak native build artifacts
+          path: keccak/build/lib
+          destination: keccak_linux_x86_64_native_artifacts
+          when: always
   native-build-macos:
     executor: besu_executor_med_macos
     environment:
@@ -131,6 +137,7 @@ jobs:
             - secp256k1/build/lib/*.*dylib*
             - ipa-multipoint/build/lib/*.dylib
             - secp256r1/besu-native-ec/release/*.dylib
+            - keccak/build/lib/*.dylib
       - store_artifacts:
           name: macOS altbn128 native build artifacts
           path:  altbn128/build/lib
@@ -156,6 +163,11 @@ jobs:
           path: ipa-multipoint/build/lib
           destination: ipa_multipoint_macOS_native_artifacts
           when: always
+      - store_artifacts:
+          name: macOS keccak native build artifacts
+          path: keccak/build/lib
+          destination: keccak_macOS_native_artifacts
+          when: always
   final-assembly:
     executor: besu_executor_med_linux
     steps:
@@ -174,6 +186,7 @@ jobs:
             - secp256k1/build/libs/*.jar
             - secp256r1/build/libs/*.jar
             - ipa-multipoint/build/libs/*.jar
+            - keccak/build/libs/*.jar
       - store_artifacts:
           name: Final altbn128 build artifacts
           path: altbn128/build/libs
@@ -197,6 +210,11 @@ jobs:
       - store_artifacts:
           name: Final ipa-multipoint build artifacts
           path: ipa-multipoint/build/libs
+          destination: secp256k1_jars
+          when: always
+      - store_artifacts:
+          name: Final keccak build artifacts
+          path: keccak/build/libs
           destination: secp256k1_jars
           when: always
   publish:
@@ -227,4 +245,3 @@ workflows:
                 - /^release-.*/
           requires:
             - final-assembly
-
