--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -91,11 +91,11 @@ jobs:
       - persist_to_workspace:
           root: .
           paths:
-            - altbn128/build/lib/*.so*
-            - bls12-381/build/lib/*.so*
-            - secp256k1/build/lib/*.so*
-            - ipa-multipoint/build/lib/*.so
-            - secp256r1/besu-native-ec/release/*.so
+            - altbn128/build/*/lib/*.so*
+            - bls12-381/build/*/lib/*.so*
+            - secp256k1/build/*/lib/*.so*
+            - ipa-multipoint/build/*/lib/*.so
+            - secp256r1/besu-native-ec/release/*/*.so
       - store_artifacts:
           name: Linux altbn128 native build artifacts
           path:  altbn128/build/lib
@@ -121,7 +121,7 @@ jobs:
           path: ipa-multipoint/build/lib
           destination: ipa_multipoint_linux_x86_64_native_artifacts
           when: always
-  native-build-linux-arm64:
+  native-build-linux-aarch64:
     executor: besu_executor_med_linux_arm64
     environment:
       SKIP_GRADLE: true
@@ -135,10 +135,10 @@ jobs:
       - persist_to_workspace:
           root: .
           paths:
-            - altbn128/build/lib/*.so*
-            - secp256k1/build/lib/*.so*
-            - ipa-multipoint/build/lib/*.so
-            - secp256r1/besu-native-ec/release/*.so
+            - altbn128/build/*/lib/*.so*
+            - secp256k1/build/*/lib/*.so*
+            - ipa-multipoint/build/*/lib/*.so
+            - secp256r1/besu-native-ec/release/*/*.so
       - store_artifacts:
           name: Linux altbn128 native build artifacts
           path:  altbn128/build/lib
@@ -173,11 +173,11 @@ jobs:
       - persist_to_workspace:
           root: .
           paths:
-            - altbn128/build/lib/*.*dylib*
-            - bls12-381/build/lib/*.*dylib*
-            - secp256k1/build/lib/*.*dylib*
-            - ipa-multipoint/build/lib/*.dylib
-            - secp256r1/besu-native-ec/release/*.dylib
+            - altbn128/build/*/lib/*.*dylib*
+            - bls12-381/build/*/lib/*.*dylib*
+            - secp256k1/build/*/lib/*.*dylib*
+            - ipa-multipoint/build/*/lib/*.dylib
+            - secp256r1/besu-native-ec/release/*/*.dylib
       - store_artifacts:
           name: macOS altbn128 native build artifacts
           path:  altbn128/build/lib
