--- a/altbn128/build.gradle
+++ b/altbn128/build.gradle
@@ -24,19 +24,29 @@ dependencies {
 }
 
 task macLibCopy(type: Copy) {
-  from 'build/lib/libeth_altbn128.dylib'
+  from 'build'
+  include '*/lib/libeth_altbn128.dylib'
   into 'build/resources/main/darwin'
 }
 jar.dependsOn macLibCopy
 
 task linuxLibCopy(type: Copy) {
-  from 'build/lib/libeth_altbn128.so'
+  from 'build'
+  include '*/lib/libeth_altbn128.so'
   into 'build/resources/main/linux-x86-64'
 }
 jar.dependsOn linuxLibCopy
 
+task linuxArm64LibCopy(type: Copy) {
+  from 'build'
+  include '*/lib/libeth_altbn128.so'
+  into 'build/resources/main/linux-aarch64'
+}
+jar.dependsOn linuxArm64LibCopy
+
 jar {
   archiveBaseName = 'besu-native-altbn128'
+  includeEmptyDirs = false
   manifest {
     attributes(
         'Specification-Title': archiveBaseName,
