--- a/secp256r1/build.gradle
+++ b/secp256r1/build.gradle
@@ -29,28 +29,29 @@ dependencies {
 }
 
 task macLibCopy(type: Copy) {
-    from 'besu-native-ec/release/libbesu_native_ec.dylib'
-    from 'besu-native-ec/release/libbesu_native_ec_crypto.dylib'
+    from 'besu-native-ec/release'
+    include '*/libbesu_native_ec*.dylib'
     into 'build/resources/main/darwin'
 }
 jar.dependsOn macLibCopy
 
 task linuxLibCopy(type: Copy) {
-    from 'besu-native-ec/release/libbesu_native_ec.so'
-    from 'besu-native-ec/release/libbesu_native_ec_crypto.so'
+    from 'besu-native-ec/release/'
+    include '*/libbesu_native_ec*.so'
     into 'build/resources/main/linux-x86-64'
 }
 jar.dependsOn linuxLibCopy
 
 task linuxArm64LibCopy(type: Copy) {
-    from 'besu-native-ec/release/libbesu_native_ec.so'
-    from 'besu-native-ec/release/libbesu_native_ec_crypto.so'
-    into 'build/resources/main/linux-arch6464'
+    from 'besu-native-ec/release'
+    include '*/libbesu_native_ec*.so'
+    into 'build/resources/main/linux-aarch64'
 }
 jar.dependsOn linuxArm64LibCopy
 
 jar {
     archiveBaseName = 'besu-native-secp256r1'
+    includeEmptyDirs = false
     manifest {
         attributes(
                 'Specification-Title': archiveBaseName,
