--- a/ipa-multipoint/build.gradle
+++ b/ipa-multipoint/build.gradle
@@ -27,20 +27,17 @@ dependencies {
 }
 
 task macLibCopy(type: Copy) {
-  from 'build'
-  include '*/lib/libipa_multipoint_jni.dylib'
+  from 'build/darwin/lib/libipa_multipoint_jni.dylib'
   into 'build/resources/main/darwin'
 }
 jar.dependsOn macLibCopy
 
 task linuxLibCopy(type: Copy) {
-  from 'build'
-  include '*/lib/libipa_multipoint_jni.so'
+  from 'build/linux-gnu-x86_64/lib/libipa_multipoint_jni.so'
   into 'build/resources/main/linux-x86-64'
 }
 task linuxArm64LibCopy(type: Copy) {
-  from 'build'
-  include '*/lib/libipa_multipoint_jni.so'
+  from 'build/linux-gnu-aarch64/lib/libipa_multipoint_jni.so'
   into 'build/resources/main/linux-aarch64'
 }
 jar.dependsOn linuxArm64LibCopy
