--- a/secp256r1/build.gradle
+++ b/secp256r1/build.gradle
@@ -36,13 +36,15 @@ task macLibCopy(type: Copy) {
 jar.dependsOn macLibCopy
 
 task linuxLibCopy(type: Copy) {
-    from 'besu-native-ec/release/linux-gnu-x86_64/libbesu_native_ec*.so'
+    from 'besu-native-ec/release/linux-gnu-x86_64/libbesu_native_ec.so'
+    from 'besu-native-ec/release/linux-gnu-x86_64/libbesu_native_ec_crypto.dylib'
     into 'build/resources/main/linux-x86-64'
 }
 jar.dependsOn linuxLibCopy
 
 task linuxArm64LibCopy(type: Copy) {
-    from 'besu-native-ec/release/linux-gnu-aarch64/libbesu_native_ec*.so'
+    from 'besu-native-ec/release/linux-gnu-aarch64/libbesu_native_ec.so'
+    from 'besu-native-ec/release/linux-gnu-aarch64/libbesu_native_ec_crypto.dylib'
     into 'build/resources/main/linux-aarch64'
 }
 jar.dependsOn linuxArm64LibCopy
