remove parallel gradle build on final assembly
Signed-off-by: garyschulte <garyschulte@gmail.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -212,7 +212,7 @@ jobs:
       - run:
           name: gradle
           command: |
-            ./gradlew --no-daemon --parallel build
+            ./gradlew --no-daemon build
       - persist_to_workspace:
           root: .
           paths:
