--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -98,17 +98,17 @@ jobs:
             - secp256r1/besu-native-ec/release/linux-gnu-x86_64/*.so
       - store_artifacts:
           name: Linux altbn128 native build artifacts
-          path:  altbn128/build/lib
+          path:  altbn128/build/linux-gnu-x86_64/lib
           destination: altbn128_linux_x86_64_native_artifacts
           when: always
       - store_artifacts:
           name: Linux bls12-381 native build artifacts
-          path:  bls12-381/build/lib
+          path:  bls12-381/build/linux-gnu-x86_64/lib
           destination: bls12_381_linux_x86_64_native_artifacts
           when: always
       - store_artifacts:
           name: Linux secp256k1 native build artifacts
-          path:  secp256k1/build/lib
+          path:  secp256k1/build/linux-gnu-x86_64/lib
           destination: secp256k1_linux_x86_64_native_artifacts
           when: always
       - store_artifacts:
@@ -118,7 +118,7 @@ jobs:
           when: always
       - store_artifacts:
           name: Linux ipa-multipoint native build artifacts
-          path: ipa-multipoint/build/lib
+          path: ipa-multipoint/build/linux-gnu-x86_64/lib
           destination: ipa_multipoint_linux_x86_64_native_artifacts
           when: always
   native-build-linux-aarch64:
@@ -141,12 +141,12 @@ jobs:
             - secp256r1/besu-native-ec/release/linux-gnu-aarch64/*.so
       - store_artifacts:
           name: Linux altbn128 native build artifacts
-          path:  altbn128/build/lib
+          path:  altbn128/build/linux-gnu-aarch64/lib
           destination: altbn128_linux_aarch64_native_artifacts
           when: always
       - store_artifacts:
           name: Linux secp256k1 native build artifacts
-          path:  secp256k1/build/lib
+          path:  secp256k1/build/linux-gnu-aarch64/lib
           destination: secp256k1_linux_aarch64_native_artifacts
           when: always
       - store_artifacts:
@@ -156,7 +156,7 @@ jobs:
           when: always
       - store_artifacts:
           name: Linux ipa-multipoint native build artifacts
-          path: ipa-multipoint/build/lib
+          path: ipa-multipoint/build/linux-gnu-aarch64/lib
           destination: ipa_multipoint_linux_aarch64_native_artifacts
           when: always
   native-build-macos:
@@ -180,27 +180,27 @@ jobs:
             - secp256r1/besu-native-ec/release/darwin/*.dylib
       - store_artifacts:
           name: macOS altbn128 native build artifacts
-          path:  altbn128/build/lib
+          path:  altbn128/build/darwin/lib
           destination: altbn128_macOS_native_artifacts
           when: always
       - store_artifacts:
           name: macOS bls12-381 native build artifacts
-          path:  bls12-381/build/lib
+          path:  bls12-381/build/darwin/lib
           destination: bls12_381_macOS_native_artifacts
           when: always
       - store_artifacts:
           name: macOS secp256k1 native build artifacts
-          path:  secp256k1/build/lib
+          path:  secp256k1/build/darwin/lib
           destination: secp256k1_macOS_native_artifacts
           when: always
       - store_artifacts:
           name: macOS secp256r1 native build artifacts
-          path:  secp256r1/besu-native-ec/release
+          path:  secp256r1/besu-native-ec/darwin/release
           destination: secp256r1_macOS_native_artifacts
           when: always
       - store_artifacts:
           name: macOS ipa-multipoint native build artifacts
-          path: ipa-multipoint/build/lib
+          path: ipa-multipoint/build/darwin/lib
           destination: ipa_multipoint_macOS_native_artifacts
           when: always
   final-assembly:
@@ -212,7 +212,7 @@ jobs:
       - run:
           name: gradle
           command: |
-            ./gradlew --no-daemon build
+            ./gradlew --no-daemon --parallel build
       - persist_to_workspace:
           root: .
           paths:
