fix secp256r1 os_arch path, add missing 'depends on' in bls12-381
Signed-off-by: garyschulte <garyschulte@gmail.com>

--- a/bls12-381/build.gradle
+++ b/bls12-381/build.gradle
@@ -37,6 +37,7 @@ task linuxLibCopy(type: Copy) {
   from 'build/linux-gnu-x86_64/lib/libeth_pairings.so'
   into 'build/resources/main/linux-x86-64'
 }
+jar.dependsOn linuxLibCopy
 
 jar {
   archiveBaseName = 'besu-native-bls12-381'
